2017-07-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* ldgram.y (section_name_spec): Simplifiy and use
	wildcard_maybe_exclude.
	* testsuite/ld-scripts/exclude-file-5.d: New file.
	* testsuite/ld-scripts/exclude-file-5.map: New file.
	* testsuite/ld-scripts/exclude-file-5.t: New file.
	* testsuite/ld-scripts/exclude-file-6.d: New file.
	* testsuite/ld-scripts/exclude-file-6.map: New file.
	* testsuite/ld-scripts/exclude-file-6.t: New file.
	* testsuite/ld-scripts/exclude-file-7.d: New file.
	* testsuite/ld-scripts/exclude-file-7.map: New file.
	* testsuite/ld-scripts/exclude-file-7.t: New file.
	* NEWS: Mention change.

2017-07-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* ldlang.c (print_wild_statement): Use full names for SORT
	specifiers.

2017-07-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* ldgram.y (wildcard_spec): Rename to...
	(section_name_spec): ...this.

2017-07-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* ldgram.y (filename_spec): New rule.
	(input_section_spec_no_keep): Use filename_spec.
	(wildcard_maybe_exclude): New rule.
	* testsuite/ld-scripts/align.exp: Run new tests.
	* testsuite/ld-scripts/align3.d: New file.
	* testsuite/ld-scripts/align3.t: New file.
	* testsuite/ld-scripts/align4.d: New file.
	* testsuite/ld-scripts/align4.t: New file.
	* testsuite/ld-scripts/align5.d: New file.
	* testsuite/ld-scripts/align5.t: New file.
	* NEWS: Mention change.

2017-07-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* ldlang.c (placed_commons): Delete.
	(lang_add_wild): No longer set placed_commons.

2017-07-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* ldgram.y (ldgram_had_keep): Make static.
	(ldgram_vers_current_lang): Likewise.

2017-07-25  Alan Modra  <amodra@gmail.com>

	* testsuite/ld-powerpc/tlsopt5.s: Add cfi.
	* testsuite/ld-powerpc/tlsopt5.d: Update.
	* testsuite/ld-powerpc/tlsopt5.wf: New file.
	* testsuite/ld-powerpc/powerpc.exp: Perform new tlsopt5 test.
